--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
+    "endOfLine": "auto",
     "semi": true,
     "singleQuote": true,
-    "printWidth": 120
-}
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "printWidth": 100,
+    "arrowParens": "always"
+  }
