--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,51 +1,31 @@
 {
     "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint", "prettier", "import"],
     "extends": [
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier",
-      "plugin:react-hooks/recommended",
-      "plugin:prettier/recommended"
+        "airbnb-base",
+        "airbnb-typescript/base",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended",
+        "prettier"
     ],
-    "env": {
-      "browser": true,
-      "es6": true,
-      "jest": true,
-      "node": true
-    },
-    "root": true,
     "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "ecmaVersion": "latest",
-          "sourceType": "module"
+        "ecmaVersion": 2020,
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
-    "plugins": [
-      "@typescript-eslint", "react", "prettier", "react-hooks"
-    ],
+    "env": {
+        "es6": true,
+        "browser": true,
+        "node": true
+    },
     "rules": {
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn",
-      "comma-dangle": ["error", "only-multiline"],
-      "react/prop-types": "off",
-      "react/display-name": "off",
-      "@typescript-eslint/explicit-function-return-type": "off",
-      "prettier/prettier": ["error", { "endOfLine": "auto" }],
-      "@typescript-eslint/interface-name-prefix": "off",
-      "@typescript-eslint/ban-ts-comment": "error",
-      "@typescript-eslint/no-non-null-assertion": "off",
-      "@typescript-eslint/explicit-module-boundary-types": "off",
-      "@typescript-eslint/no-empty-function": "off",
-      "@typescript-eslint/no-explicit-any": "error",
-      "@typescript-eslint/no-var-reqiures": "off",
-      "react/jsx-uses-react": "off",
-      "react/react-in-jsx-scope": "off"
-    },
-      "settings": {
-          "react": {
-              "pragma": "React",
-              "version": "detect"
-          }
-      }
-  }
+        "@typescript-eslint/no-explicit-any": 2,
+        "no-debugger": "off",
+        "no-console": 0,
+        "class-methods-use-this": "off",
+        "prettier/prettier": ["error", { "endOfLine": "auto" }],
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+        "no-use-before-define": ["error", { "functions": false, "variables": false}]
+    }
+}
