--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,7 @@
 {
-    "endOfLine": "auto",
+    "trailingComma": "es5",
+    "tabWidth": 4,
     "semi": true,
     "singleQuote": true,
-    "tabWidth": 2,
-    "trailingComma": "es5",
-    "printWidth": 100,
-    "arrowParens": "always"
-  }
+    "printWidth": 120
+}
